refactor: remove deprecated setId, setJar, and setInheritsFrom methods in GameInstanceManifest